# gyoza-ai

./: LICENSE  README.md  pyproject.toml
GyozaMic/GyozaMic/: AudioPlayerView.swift  AudioRecorder.swift  ContentView.swift  GyozaMicApp.swift  Info.plist  Item.swift  ShareSheet.swift
GyozaMic/GyozaMic.xcodeproj/: project.pbxproj
GyozaMic/GyozaMicTests/: GyozaMicTests.swift
GyozaMic/GyozaMicUITests/: GyozaMicUITests.swift  GyozaMicUITestsLaunchTests.swift
gyoza_ai/: __init__.py  main.py
tests/: __init__.py  test_main.py
